# strands-pgsql-agent-framework

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
camping-db/: Dockerfile  app.py  docker-compose.yml  identity.py
camping-db/identities/: alice_rider.md  bob_wanderer.md
camping-db/migrations/: 003_camps.sql  005_identities.sql  101_parcel_services.sql  102_pgrst_role.sql  103_api_schema.sql
camping-db/prompts/: rules.md  soul.md
camping-db/scripts/: ingest.py
camping-db/tools/: camps.py  geo.py  parcels.py
example/: .env.example  Dockerfile  app.py  docker-compose.yml
example/prompts/: rules.md  soul.md
images/agent/: Dockerfile  entrypoint.sh
images/db/: Dockerfile
migrations/: 001_init.sql  002_prompts.sql  003_identities.sql
src/strands_pg/: __init__.py  _pool.py  agentmail.py  api.py  cli.py  identity.py  memory.py  memory_tools.py  migrate.py  prompts.py  session.py
templates/agent/: .env.example  .gitignore  Dockerfile  README.md  app.py  bootstrap-lxc.sh  deploy.sh  docker-compose.yml  entrypoint.sh  requirements.txt
templates/agent/db/: Dockerfile
templates/agent/prompts/: rules.md  soul.md
templates/agent/systemd/: strands-pg-deploy.path.in  strands-pg-deploy.service.in
tests/: test_import.py
