[project]
name = "strands-pg"
version = "0.1.3"
description = "Postgres-backed session, memory, and API primitives for Strands agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Alice Rider", email = "brian.peterson@cloudshift.cc" },
]
dependencies = [
    "strands-agents>=1.13.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35"]
ollama = ["ollama>=0.3"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
strands-pg-migrate = "strands_pg.migrate:main"
strands-pg-chat = "strands_pg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strands_pg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# python-semantic-release: auto-bump version + tag on merges to main based on
# Conventional Commits. Triggered by .github/workflows/release.yml. We do NOT
# publish to PyPI (project is distributed as source via install.sh) — the
# workflow only creates a tag and a GitHub Release.
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/strands_pg/__init__.py:__version__"]
upload_to_pypi = false
upload_to_release = true
build_command = ""
commit_parser = "angular"
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^chore\\(release\\)"]
